# zed2i-tools

./: .gitignore  CMakeLists.txt  Experiments.md  README.md  TODO.md
analysis/scripts/: analyze_recording.py
config/: example.conf  pipeline_config.yaml
include/: Config.hpp  DataRecorder.hpp  DataRetriever.hpp  IZedCamera.hpp  RealZedCamera.hpp  Validator.hpp
include/camera/: CameraManager.hpp  Config.hpp  DataRecorder.hpp  DataRetriever.hpp  Logger.hpp
include/traversability/: config.hpp  offline_pipeline.hpp  pipeline_runner.hpp  polarize.hpp  tilt_compensate.hpp  traversability.hpp  voxel_filter.hpp
src/: CameraManager.cpp  Config.cpp  DataRecorder.cpp  DataRetriever.cpp  Logger.cpp  RealZedCamera.cpp  Validator.cpp  main.cpp
src/camera/: CameraManager.cpp  Config.cpp  DataRecorder.cpp  DataRetriever.cpp  Logger.cpp  RealZedCamera.cpp  Validator.cpp  main.cpp
src/traversability/: README.md  config.cpp  live_viewer_main.cpp  main.cpp  offline_pipeline.cpp  pipeline_runner.cpp  polarize.cpp  tilt_compensate.cpp  traversability.cpp  voxel_filter.cpp
src/traversability/py/: polarize.py  run_svo_pipeline.py  traversability.py  voxel_filter.py
src/traversability/python/: live_trav_viewer.py  run_svo_pipeline.py  tilt_compensate.py  traversability.py  voxel_filter.py
tests/: MockZedCamera.hpp  test_config.cpp  test_data_recorder.cpp  test_data_retriever.cpp  test_integration_pipeline.cpp  test_validator.cpp
tools/: height_map_viewer.py  offline_summary.py  pngs_to_video.py  pointcloud_comparison.py  pointcloud_viewer.py  polar2cartesian.py  svo_offline_summary.py  traversabilty_bin_frames.py  traversabilty_frames.py  travviz_common.py
